# netcat6

./: .gitignore  AUTHORS  BUGS  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.Maint  TODO  acconfig.h  aclocal.m4  bootstrap  buildrelease  configure  configure.ac  configure.in  nc6.spec  nc6.spec.in
config/: .gitignore  ChangeLog  Makefile.am  ai_constants.m4  in6_00_header.m4  in6_enable_ipv6.m4  in6_func_getaddrinfo.m4  in6_func_salen.m4  in6_guess_stack.m4  in6_struct_sockaddr.m4  in6_struct_sockaddrin6.m4  in6x_00_header.m4  in6x_func_ifaddrs.m4  in6x_struct_icmp6hdr.m4  in6x_struct_ip6hdr.m4  member_sin6_scope_id.m4  mkinstalldirs  paths.m4  proto_bluez.m4  proto_inet6.m4  proto_iucv.m4  socklen_t.m4  somaxconn_constant.m4  type_socklen_t.m4  type_struct_sockaddr_in6.m4  type_struct_sockaddr_l2.m4  type_struct_sockaddr_storage.m4  wait_any_constant.m4
contrib/: Makefile.am
docs/: .gitignore  Makefile.am  Makefile.in  nc6.1  nc6.1.in
i18n/: messages.pot
po/: .gitignore  ChangeLog  Makefile.in.in  Makevars  POTFILES.in  it.po  nc6.pot
src/: .gitignore  Makefile.am  Makefile.in  acconfig.h  afindep.c  afindep.h  attributes.c  attributes.h  bluez.c  bluez.h  circ_buf.c  circ_buf.h  config.h.in  connection.c  connection.h  filter.c  filter.h  io_stream.c  io_stream.h  iucv.c  iucv.h  main.c  misc.c  misc.h  netsupport.c  netsupport.h  network.c  network.h  options.c  options.h  parser.c  parser.h  readwrite.c  readwrite.h  rt_config.c  rt_config.h  system.h  tcp.c  tcp.h  timeout.c  (+3 more)
