dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(nc6, 0.2pre2)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_ISC_POSIX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h unistd.h errno.h netdb.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
IN6_STRUCT_SOCKADDR_STORAGE
IN6_STRUCT_SOCKADDR_STORAGE_SS_FAMILY(AC_DEFINE(HAVE_SS_FAMILY))
IN6_STRUCT_SOCKADDR_STORAGE___SS_FAMILY(AC_DEFINE(HAVE___SS_FAMILY))
IN6_STRUCT_SOCKADDR_IN6

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket strerror strtol)
IN6_FUNC_GETADDRINFO
AC_CHECK_FUNCS(gai_strerror getnameinfo)

AC_SUBST(ac_aux_dir)

AC_OUTPUT([Makefile docs/Makefile src/Makefile],
[test -z "$CONFIG_HEADERS" || echo timestamp > src/stamp-h.in])
