dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(nc6, 0.2pre3)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_ISC_POSIX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([errno.h fcntl.h limits.h netdb.h netinet/in.h signal.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl This is for autoconf 2.5 -- when nc6 will make use of it... ;-)
dnl AC_DEFINE([HAVE_SS_FAMILY], 1, 
dnl           [Defined if struct sockaddr_storage has ss_family member])
dnl AC_DEFINE([HAVE___SS_FAMILY], 0, 
dnl           [Defined if struct sockaddr_storage has old __ss_family member])

IN6_STRUCT_SOCKADDR_STORAGE
IN6_STRUCT_SOCKADDR_STORAGE_SS_FAMILY(AC_DEFINE(HAVE_SS_FAMILY, 1))
IN6_STRUCT_SOCKADDR_STORAGE___SS_FAMILY(AC_DEFINE(HAVE___SS_FAMILY, 1))
IN6_STRUCT_SOCKADDR_IN6

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
dnl AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset select socket strerror strrchr strtol signal fcntl])
IN6_FUNC_GETADDRINFO
AC_CHECK_FUNCS([gai_strerror getnameinfo])

AC_ARG_ENABLE(debug, [  --enable-debug                Enable debugging - useful only for developers],
	AC_DEFINE(DEBUG,1),
	AC_DEFINE(NDEBUG,1))
	
AC_SUBST(ac_aux_dir)

AC_OUTPUT([Makefile docs/Makefile src/Makefile],
[test -z "$CONFIG_HEADERS" || echo timestamp > src/stamp-h.in])
